--- a/app/brokers/(3-techincal-docs)/javascript-sdk/params/page.mdx
+++ b/app/brokers/(3-techincal-docs)/javascript-sdk/params/page.mdx
@@ -110,7 +110,7 @@ const fillOrKillParams = {
 
 ### `ccmParams`
 
-The Cross-Chain Messaging optional `ccmParams` object enables to pass a [Cross-Chain Message](../../advanced/cross-chain-messaging/cross-chain-messaging)
+The Cross-Chain Messaging optional `ccmParams` object enables to pass a [Cross-Chain Message](/protocol/cross-chain-messaging/overview)
 to a receiver contract/program on the destination chain.
 
 {
