--- a/app/protocol/(1-concepts)/boost/page.mdx
+++ b/app/protocol/(1-concepts)/boost/page.mdx
@@ -49,7 +49,7 @@ The LPs take the risk on that deposit being confirmed at a later point once the 
 has been reached.
 
 <Callout type="info">
-Learn more about risks of providing *Boost* liquidity [here](../lp/boost/how-boost-works#boost-risks).
+Learn more about risks of providing *Boost* liquidity [here](/lp/boost/how-boost-works#boost-risks).
 </Callout>
 
 ### Example: Boost BTC to ETH swap
