--- a/app/protocol/(3-technical-docs)/cross-chain-messaging/hub-xcm/page.mdx
+++ b/app/protocol/(3-technical-docs)/cross-chain-messaging/hub-xcm/page.mdx
@@ -10,7 +10,7 @@ description: Description of CCM swaps to Polkadot Assethub
 ## CCM Swaps to Polkadot Assethub
 
 ### Overview
-The Chainflip CCM functionality allows users to swap any asset into one of the [supported Assets on Assethub](../../../supported-chains-and-assets/supported-chains-and-assets#assets) and then submit an extrinsic on Assethub, including [XCM extrinsics](https://docs.polkadot.com/develop/interoperability/intro-to-xcm/).
+The Chainflip CCM functionality allows users to swap any asset into one of the [supported Assets on Assethub](/protocol/supported-chains-assets/chains-assets#assets) and then submit an extrinsic on Assethub, including [XCM extrinsics](https://docs.polkadot.com/develop/interoperability/intro-to-xcm/).
 This extrinsic will originate from an ephemeral account that controls the funds resulting from your swap. After the extrinsic is executed, any remaining funds will be forwarded to your chosen swap destination address.
 
 ### Supported extrinsic
