--- a/app/protocol/(3-technical-docs)/cross-chain-messaging/sol-ccm/page.mdx
+++ b/app/protocol/(3-technical-docs)/cross-chain-messaging/sol-ccm/page.mdx
@@ -385,4 +385,4 @@ Which will yield the response:
 }
 ```
 
-This Ethereum transaction can then be constructed signed and sent to the Chainflip's Vault smart contract as described in the [EVM Vault Swap docs](../vault-swaps/evm#2-construct-the-transaction).
+This Ethereum transaction can then be constructed signed and sent to the Chainflip's Vault smart contract as described in the [EVM Vault Swap docs](/brokers/vault-swaps-api/evm#2-construct-the-transaction).
