--- a/app/validators/(1-concepts)/validator-types-and-states/page.mdx
+++ b/app/validators/(1-concepts)/validator-types-and-states/page.mdx
@@ -10,7 +10,7 @@ description: This page is intended to explain what the different states of a Val
 
 This page is intended to explain what the different states of a Validator are possible in the Chainflip system, and what each of them means.
 
-It is important to note that a Validator does not refer to just any node on the Chainflip State Chain network. In contrast to State Chain Client operators, who may be using them for [liquidity management](/protocol/just-in-time-amm-protocol), [running a Broker](../swaps-amm/deposit-channels-and-brokers#brokers), or simply monitoring the State Chain for data, a Validator, a node **must also run the Chainflip Engine (CFE)** sidecar module and have **configured endpoints** for all external chains, as well as set their State Chain **account type** to Validator.
+It is important to note that a Validator does not refer to just any node on the Chainflip State Chain network. In contrast to State Chain Client operators, who may be using them for [liquidity management](/protocol/just-in-time-amm-protocol), [running a Broker](/brokers/running-broker-api), or simply monitoring the State Chain for data, a Validator, a node **must also run the Chainflip Engine (CFE)** sidecar module and have **configured endpoints** for all external chains, as well as set their State Chain **account type** to Validator.
 
 This page should help operators understand how to set their Validator state to participate in auctions and manage their system accordingly.
 
