--- a/app/validators/(2-guides)/testnet/funding/page.mdx
+++ b/app/validators/(2-guides)/testnet/funding/page.mdx
@@ -44,7 +44,7 @@ For the remainder of this guide, we will assume that you have an adequate amount
 
 Finally, **you do not need to move the `tFLIP` to your Validators' Ethereum wallet**. You should use your Ethereum wallet connected to Sepolia and use that to fund your account instead.
 
-To become an active validator, you'll need to win an Auction. To win an auction, you'll need to fund your account with some `tFLIP`. For more information about Auctions and how they are supposed to work, you can check out this article: [Chainflip Validator Auction Theory](../../../concepts/token-economics/auction-theory-ssod).
+To become an active validator, you'll need to win an Auction. To win an auction, you'll need to fund your account with some `tFLIP`. For more information about Auctions and how they are supposed to work, you can check out this article: [Chainflip Validator Auction Theory](/validators/validators-role#the-auction-system-allocating-validator-slots).
 
 ### Adding Funds to your Validator Node
 
