--- a/app/validators/(3-technical-docs)/maintenance/page.mdx
+++ b/app/validators/(3-technical-docs)/maintenance/page.mdx
@@ -85,7 +85,7 @@ The syntax for specifying filtering directives is given [here](https://docs.rs/t
 
 ## Migrating to a Different Server
 
-One of your amazing community members has developed this guide. After you have created a new machine and finished all the steps up to and including [Creating new linux users](../validator-setup#creating-new-linux-user), follow this guide.
+One of your amazing community members has developed this guide. After you have created a new machine and finished all the steps up to and including [Creating new linux users](/validators/mainnet/validator-setup#creating-new-linux-user), follow this guide.
 
 <Callout type="warning">
     Do *not* perform migration steps during a rotation.
