--- a/app/brokers/(1-concepts)/swapping-basics/page.mdx
+++ b/app/brokers/(1-concepts)/swapping-basics/page.mdx
@@ -22,7 +22,7 @@ At a high level, the process can be described with the following steps:
 
 <Steps>
     ### Initiating a swap
-    This first step can be done through the [Swapping app](https://swap.chainflip.io/) (frontend), the [Javascript SDK](integrations/javascript-sdk/introduction), or directly using the [Chainflip CLI client](/brokers/broker-api/requests#broker_request_swap_deposit_address). There are two primary methods to start a Chainflip Swap:
+    This first step can be done through the [Swapping app](https://swap.chainflip.io/) (frontend), the [Javascript SDK](/brokers/javascript-sdk), or directly using the [Chainflip CLI client](/brokers/broker-api/requests#broker_request_swap_deposit_address). There are two primary methods to start a Chainflip Swap:
     * **Generating a Deposit Address**: This method involves creating a unique deposit address where the user can send the funds. Once the deposit is made, the swap process is automatically triggered. See [Request Deposit Address](/brokers/javascript-sdk/functions#requestdepositaddressv2) method.
     * **Direct call to the Chainflip Vault:** This method is a function call to a smart contract for EVM chains and a program call to a program for Solana, including a payload. This makes *aggregation* easier for application developers (think DEX Aggregators). For more details see [Vault swaps](/brokers/broker-vault-swaps).
 
