--- a/app/protocol/(3-technical-docs)/supported-chains-assets/chains-assets/page.mdx
+++ b/app/protocol/(3-technical-docs)/supported-chains-assets/chains-assets/page.mdx
@@ -9,7 +9,7 @@ description: Our SDK/API uses human-readable strings to identify chains.
 
 ## Chains
 
-Our SDK/API uses human-readable strings to identify chains. For more information, see [Get Chains](integrations/javascript-sdk/get-chains.md "mention")
+Our SDK/API uses human-readable strings to identify chains. For more information, see [Get Chains](/brokers/javascript-sdk/requests/get-chains.md "mention")
 
 | Chain | Network |
 | --- | --- |
@@ -22,7 +22,7 @@ Our SDK/API uses human-readable strings to identify chains. For more information
 
 ## Assets
 
-Our SDK/API uses human-readable strings to identify assets. For more information, see [Get Assets](integrations/javascript-sdk/get-assets.md "mention").
+Our SDK/API uses human-readable strings to identify assets. For more information, see [Get Assets](/brokers/javascript-sdk/requests/get-assets.md "mention").
 
   | Asset | Chain | Network |
   | --- | --- | --- |
@@ -43,6 +43,6 @@ Our SDK/API uses human-readable strings to identify assets. For more information
 
 We currently support different networks for different purposes:
 
-- **Mainnet**: Our mainnet deployment. Learn more in [Mainnet Documentation](../../mainnet/validator-setup/prerequisites).
-- **Perseverance**: Our persistent testnet. Learn more in [Perseverance Documentation](../../testnet/validator-documentation).
+- **Mainnet**: Our mainnet deployment. Learn more in [Mainnet Documentation](/validators/mainnet/validator-setup/prerequisites).
+- **Perseverance**: Our persistent testnet. Learn more in [Perseverance Documentation](/validators/testnet/validator-documentation).
 - **Sisyphos**: Our staging network where we test releases before upgrading Perseverance.
