--- a/app/protocol/(3-technical-docs)/vaults/evm-ethereum-vault-design/page.mdx
+++ b/app/protocol/(3-technical-docs)/vaults/evm-ethereum-vault-design/page.mdx
@@ -28,9 +28,9 @@ Ethereum doesn't natively support FROST Protocol Schnorr Signatures as part of t
 
 ### Generation and management of Deposit Channel Addresses
 
-The Chainflip protocol [opens deposit channel addresses](../swaps-amm/deposit-channels-and-brokers#opening-deposit-channels) for every swap. To do that, it precomutes the address where a Deposit smart contract will be deployed using the `create2` opcode with a predetermined `salt` for each swap. When the user makes a deposit to that address, the deposit is [witnessed](/protocol/ingress-witnessing-deposits) and a Deposit contract is deployed in that address to fetch the assets.
+The Chainflip protocol [opens deposit channel addresses](/brokers/broker-deposit-channels-swaps#opening-deposit-channels) for every swap. To do that, it precomutes the address where a Deposit smart contract will be deployed using the `create2` opcode with a predetermined `salt` for each swap. When the user makes a deposit to that address, the deposit is [witnessed](/protocol/ingress-witnessing-deposits) and a Deposit contract is deployed in that address to fetch the assets.
 
-Deploying a smart contract is an expensive operation that requires a lot of gas. In order to reduce the gas costs, and therefore the fees for the users, already deployed Deposit Channels are reused for successive swaps. When a channel opened for one user [expires](../swaps-amm/deposit-channels-and-brokers#closure-of-deposit-channels), it becomes available for a future user. Then, the Vault only needs to fetch from the Deposit Channel to sweep the assets from the Deposit Channel to the Vault and doesn't require a new deployment. 
+Deploying a smart contract is an expensive operation that requires a lot of gas. In order to reduce the gas costs, and therefore the fees for the users, already deployed Deposit Channels are reused for successive swaps. When a channel opened for one user [expires](/brokers/broker-deposit-channels-swap#closure-of-deposit-channels), it becomes available for a future user. Then, the Vault only needs to fetch from the Deposit Channel to sweep the assets from the Deposit Channel to the Vault and doesn't require a new deployment.
 
 This optimization not only reduces the cost of fetching the assets but it also allows for deposits of native assets to be directly funneled atomically from an already deployed Deposit smart contract channel into the Vault upon deposit, without the need of performing an additional fetch from the Vault.
 
@@ -52,10 +52,10 @@ Differently from other Vault designs, the EVM Vault doesn't require moving the f
 
 ### Entry point for initiating swaps via a smart contract call
 
-While using Deposit Channels is a very simple way to initiate a swap, the Vault smart contract allows for the initiation of swaps via a smart contract call. In that case, all the swap parameters need to be passed as part of the smart contract call as explained in [Vault Swaps](../../swapping/integrations/advanced/vault-swaps).
+While using Deposit Channels is a very simple way to initiate a swap, the Vault smart contract allows for the initiation of swaps via a smart contract call. In that case, all the swap parameters need to be passed as part of the smart contract call as explained in [Vault Swaps](/brokers/broker-vault-swaps).
 
 This feature allows for easier integration with other on-chain protocols. However, it's worth evaluating the tradeoffs of using this method instead of using Deposit Channels, as generally deposit channels will require less gas.
 
 ### Cross-Chain Messaging (CCM) capabilities
 
-Besides regular swaps, Chainflip supports [Cross-Chain Messaging Swaps](../../swapping/integrations/advanced/cross-chain-messaging) for EVM chains. The Vault smart contract executes these swaps by atomically transferring the assets and calling the user's contract logic on the destination chain along with the user's specified message. These swaps are not batched with any other actions.
+Besides regular swaps, Chainflip supports [Cross-Chain Messaging Swaps](/protocol/cross-chain-messaging/overview) for EVM chains. The Vault smart contract executes these swaps by atomically transferring the assets and calling the user's contract logic on the destination chain along with the user's specified message. These swaps are not batched with any other actions.
