--- a/app/validators/(2-guides)/mainnet/important-notes/page.mdx
+++ b/app/validators/(2-guides)/mainnet/important-notes/page.mdx
@@ -12,7 +12,7 @@ import { Callout } from "nextra/components";
 
 We highly recommend reading our docs thoroughly to understand how the Chainflip network operates.
 
-- [Concepts](../../../concepts/welcome)
+- [Concepts](/protocol)
 - [The Validator Network](/protocol/protocol-overview#the-state-chain)
 
 ## Applying changes to your Node or Engine
@@ -87,7 +87,7 @@ However, there are important considerations to keep in mind:
 - These keys are separate from the session keys and engine key shares. The latter are *not* recoverable from a seed.
 - If you only backed up your validator keys without backing up your session keys or engine key shares, your validator will be penalized for missing authorship slots even if you rejoin the network and submit heartbeats. This is because session keys are rotated at the beginning of every epoch, so your rejoining will not be effective until after the next rotation.
 - The same applies to engine key shares. Losing these keys will prevent you from participating in keygen ceremonies or performing any multi-signature operations. Failing a keygen will result in penalties and a potential ban, which could lead to your validator node being removed from the authority set. In such cases, you would have to wait for the next auction to rejoin.
-- If you think the keys might be compromised, we recommend that you immediately secure your `$FLIP` funds by [binding a redeem address](../funding/advanced-account-management#redemption-execution-address-binding), [stopping your bid](../funding/funding-and-bidding#stop-bidding) and then, when your funds are unbonded, redeeming them to your wallet before funding a new node with new keys.
+- If you think the keys might be compromised, we recommend that you immediately secure your `$FLIP` funds by [binding a redeem address](/validators/mainnet/funding#redemption-execution-address-binding), [stopping your bid](/validators/mainnet/funding#stop-bidding) and then, when your funds are unbonded, redeeming them to your wallet before funding a new node with new keys.
 
 #### Engine Keyshares
 
