feat: add lp and broker visuals

--- a/app/brokers/page.mdx
+++ b/app/brokers/page.mdx
@@ -56,9 +56,9 @@ To integrate Chainflip swapping, you can integrate via:
 
 <Cards num={2}>
     <Cards.Card arrow title="Deposit Channels Swaps" href="brokers/broker-deposit-channels-swaps">
-        <>![Documentation theme screenshot](/assets/docs-theme.png)</>
+        <>![deposit-channel](/assets/deposit-channel-light.png)</>
     </Cards.Card>
     <Cards.Card arrow title="Vault Swaps" href="brokers/broker-vault-swaps">
-        <>![Blog theme screenshot](/assets/blog-theme.png)</>
+        <>![vault-swaps](/assets/vault-swaps-light.png)</>
     </Cards.Card>
 </Cards>
