--- a/app/lp/(1-concepts)/passive-liquidity/page.mdx
+++ b/app/lp/(1-concepts)/passive-liquidity/page.mdx
@@ -1,12 +1,22 @@
 ---
 
-title: Automated Trading Strategies
+title: Passive Liquidity Provisioning
 
-description: Automated trading strategies overview
+description: Passive Liquidity Provisioning overview
 
 ---
 
 import { Callout } from "nextra/components";
+
+## Passive Liquidity Provisioning
+
+Many LPs want an easier way to provide liquidity. They wanted a lower-risk, low-maintenance way to generate yield without constantly adjusting positions or watching charts.
+
+Passive liquidity provisioning is for:
+
+* Passive investors seeking consistent returns
+* Stablecoin holders looking to put idle funds to work
+* Institutional or retail users interested in low-risk exposure
 
 ## Automated Trading Strategies
 
