fix: duplicate seo tags fixes

--- a/app/brokers/(3-techincal-docs)/broker-api/requests/page.mdx
+++ b/app/brokers/(3-techincal-docs)/broker-api/requests/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Requests
+title: Broker API Requests
 
-description: All the subscriptions used in LP API
+description: All RPC endpoints defined in the Broker API
 
 ---
 
