--- a/app/brokers/(3-techincal-docs)/broker-api/types/page.mdx
+++ b/app/brokers/(3-techincal-docs)/broker-api/types/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Types
+title: Broker API Types
 
-description: All the types used in LP API
+description: All the types used in Broker API
 
 ---
 
