--- a/app/lp/(3-techincal-docs)/lp-api/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-api/page.mdx
@@ -1,6 +1,6 @@
 ---
 
-title: Index
+title: LP API
 
 description: The LP API bundle allows liquidity providers to put up orders programmatically through the JIT AMM.
 
