--- a/app/lp/(3-techincal-docs)/lp-api/requests/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-api/requests/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Requests
+title: LP API Requests
 
-description: All the subscriptions used in LP API
+description: All the endpoints used in LP API
 
 ---
 
