--- a/app/lp/(3-techincal-docs)/lp-node-rpcs/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-node-rpcs/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Index
+title: Node RPCs and Subscriptions
 
-description: All the node exposed RPCs useful for LPs
+description: All the node's exposed RPCs and subscriptions useful for LPs
 
 ---
 
