--- a/app/lp/(3-techincal-docs)/lp-node-rpcs/requests/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-node-rpcs/requests/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Requests
+title: Node RPC Requests
 
-description: The state chain node has some RPCs and subscriptions that are useful for liquidity providers.
+description: The state chain node RPCs that are useful for liquidity providers.
 
 ---
 
