--- a/app/lp/(3-techincal-docs)/lp-node-rpcs/subscriptions/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-node-rpcs/subscriptions/page.mdx
@@ -1,7 +1,7 @@
 ---
-title: Subscriptions
+title: Node Subscriptions
 
-description: The state chain node has some RPCs and subscriptions that are useful for liquidity providers.
+description: The state chain node subscriptions that are useful for liquidity providers.
 
 ---
 
