--- a/app/validators/(2-guides)/mainnet/important-notes/page.mdx
+++ b/app/validators/(2-guides)/mainnet/important-notes/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Important Notes
+title: Important Notes on Mainnet
 
-description: Important notes about the Chainflip network; how to properly secure the Chainflip Protocol and Validators.
+description: Important notes about the Chainflip network on Mainnet; how to properly secure the Chainflip Protocol and Validators.
 
 ---
 
