--- a/app/validators/(2-guides)/testnet/funding/page.mdx
+++ b/app/validators/(2-guides)/testnet/funding/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Funding
+title: Funding on Testnet
 
-description: Before your Validator is considered for the active set, you must fund your account with the necessary amount of tFLIP.
+description: How to fund your account with the necessary amount of tFLIP on Testnet.
 
 ---
 
