--- a/app/validators/(2-guides)/testnet/submitting-an-issue/page.mdx
+++ b/app/validators/(2-guides)/testnet/submitting-an-issue/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Submitting an Issue
+title: Submitting an Issue on Testnet
 
-description: This is the official way to report an issue.
+description: This is the official way to report an issue on Testnet
 
 ---
 
