--- a/app/validators/(2-guides)/testnet/validator-setup/page.mdx
+++ b/app/validators/(2-guides)/testnet/validator-setup/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Set up a Validator Node
+title: Set up a Validator Node on Testnet
 
-description: guide on how to set up a Validator node on Testnet
+description: Guide on how to set up a Validator node on Testnet
 
 ---
 
