--- a/app/validators/page.mdx
+++ b/app/validators/page.mdx
@@ -1,7 +1,6 @@
 ---
-title: Introduction
-description:
-    This is the official guide for setting up your Chainflip Validator
+title: Validators
+description: This is the official guide for setting up your Chainflip Validator
 ---
 
 import { Cards, Image } from 'nextra/components'
