--- a/app/validators/(2-guides)/mainnet/validator-setup/page.mdx
+++ b/app/validators/(2-guides)/mainnet/validator-setup/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Set up a Validator Node
+title: Set up a Validator Node on Mainnet
 
-description: guide on how to set up a Validator node on Mainnet
+description: Guide on how to set up a Validator node on Mainnet
 
 ---
 
