--- a/app/validators/(2-guides)/testnet/common-problems/page.mdx
+++ b/app/validators/(2-guides)/testnet/common-problems/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Common Problems
+title: Common Problems on Testnet
 
-description: We'll continue updating this page so you can easily troubleshoot your node.
+description: Common Problems on Testnet so that you can troubleshoot your node.
 
 ---
 
