--- a/app/protocol/(3-technical-docs)/supported-chains-assets/chains-assets/page.mdx
+++ b/app/protocol/(3-technical-docs)/supported-chains-assets/chains-assets/page.mdx
@@ -9,7 +9,7 @@ description: Our SDK/API uses human-readable strings to identify chains.
 
 ## Chains
 
-Our SDK/API uses human-readable strings to identify chains. For more information, see [Get Chains](/brokers/javascript-sdk/requests/get-chains.md "mention")
+Our SDK/API uses human-readable strings to identify chains. For more information, see [Get Chains](/brokers/javascript-sdk/functions#get-chains.md "mention")
 
 | Chain | Network |
 | --- | --- |
@@ -22,7 +22,7 @@ Our SDK/API uses human-readable strings to identify chains. For more information
 
 ## Assets
 
-Our SDK/API uses human-readable strings to identify assets. For more information, see [Get Assets](/brokers/javascript-sdk/requests/get-assets.md "mention").
+Our SDK/API uses human-readable strings to identify assets. For more information, see [Get Assets](/brokers/javascript-sdk/functions#get-assets.md "mention").
 
   | Asset | Chain | Network |
   | --- | --- | --- |
